@@ -1,5 +1,9 @@
 IMOD History
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+3/29/10: Improved merging time when running isosurface with multiple threads;
+multipled threads are now enabled by default, with the number set to the
+number of processors on system (or value of IMOD_PROCESSORS), limited to 4.
+
 3/29/10: In Etomo, added a checkbox for running tilt on the graphics card to
 Tomogram Positioning.
 
